# swupd-overdue

./: .gitignore  Makefile.am  README.md  configure.ac  swupd-overdue.1  swupd-overdue.c  swupd-overdue.md  swupd-overdue.service
.github/workflows/: ccpp.yml
